# Work-Assistant

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_PLAN.md  CODEX_PROMPT.md  DECISIONS.md  DESIGN.md  LOGS.md  PHASE_0.md  PHASE_1_2.md  PHASE_3_6.md  PHASE_7_8.md  PRODUCT.md  PROJECT_NOTES.md  README.md  REQUESTS.md  SCHEMA.md  TASKS.md  TEST_LOGS.md  TRACEABILITY.md
engine/: pyproject.toml
engine/app/: __init__.py  main.py
engine/app/agents/: __init__.py  committer.py
engine/app/api/: devflow.py  health.py
engine/app/core/: __init__.py  config.py  pipeline.py
engine/app/db/: __init__.py  connection.py  schema.sql  store.py
engine/app/domain/: __init__.py  models.py
engine/app/git/: __init__.py  safety.py
engine/app/kb/: __init__.py  markdown.py
engine/app/prompts/: __init__.py  registry.py
engine/app/providers/: __init__.py  base.py  cli.py  mock.py  registry.py  stage_result.schema.json  subprocess.py
engine/app/risk/: __init__.py  rules.py
engine/app/scanner/: __init__.py  project.py
engine/app/services/: devflow.py
engine/app/testing/: __init__.py  (+1 more)
engine/config/: risk_rules.json
engine/tests/: conftest.py  test_config.py  test_database.py  test_engine_extra.py  test_health.py  test_health_extra.py  test_models.py  test_phase3_extra.py  test_phase3_scanner.py  test_phase4_extra.py  test_phase4_pipeline.py  test_phase5_extra.py  test_phase5_safety.py  test_phase6_api.py  test_phase6_extra.py  test_phase7_providers.py  test_phase7_runners.py  test_providers.py  test_registry_extra.py  test_store_extra.py  test_workflow.py
(+17 files in other folders)
